# xsarena

./: "$chunk_file"  .gitignore  .pre-commit-config.yaml  .snapshot.toml  .snapshotignore  .snapshotinclude  AIL_SETUP_SUMMARY.md  AIL_STUDY_MATERIALS_README.md  CHANGELOG.md  CHANGES_AND_VERIFICATION.md  CLI_AGENT_RULES.md  COMMANDS_REFERENCE.md  COMPLETE_DOCUMENTATION.md  COMPREHENSIVE_SNAPSHOT_SUMMARY.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DEPRECATED.md  DEPRECATIONS.md  IMPORTANT_FILES_LIST.md  LICENSE  MODULES.md  Makefile  Makefile.backup  README.md  README_FOR_AI.md  ROADMAP.md  SIMPLIFIED_SNAPSHOT_GUIDE.md  SNAPSHOT_OPERATIONS_RUN_LOG.md  SNAPSHOT_OPERATIONS_SUMMARY.md  SUPPORT.md  book.md  build_snapshot.py  config.json  config.jsonc  create_snapshot.sh  create_targeted_snapshot.sh  endpoints.example.yml  extension_counts.txt  file_classifications.txt  fixes_snapshot.txt  (+47 more)
.github/: PULL_REQUEST_TEMPLATE.md
.lint/: next.json  ruff.json
.xsarena/: booster_state.json  config.backup.yml  config.yml  macros.json  project.yml  session_state.json
books/: history-of-north-korea-since-1950-mostly-political-history.md  history-of-north-korea-since-1950-mostly-political-history.outline.md  nietzsche.nobs.md  nietzsche.nobs.outline.md  political-science.md  political-science.outline.md  psychology-up-to-master-s-degree-20251005-005259.md  psychology-up-to-master-s-degree.outline.md  psychology-up-to-masters-degree-level-self-study.md  psychology-up-to-masters-degree-level-self-study.outline.md
data/: blueprint_ancient_iranian_languages.json  resource_map.ail.en.json  resource_map.en.json  sources_list.en.md  tag_map.ail.yml
directives/: LOGICAL_FACT_FINDER.md  MACROS.md  POETRY_TRANSLATOR.md  README.md  SURVEY_METHODS.md  ail_macro_instructions.md  american_history_political.en.txt  ancient_iranian_languages.en.txt  arche_professor.bilingual_en-fa.md  arche_professor.en.md  arche_professor.json.md  boost_outline_en.md  general_book.txt  konkur_clinical_en.txt  logic_exclusion.txt  manifest.yml  modes.catalog.json  narrative_overlay.ail.md  psychology_book.txt  psychology_manual.txt  psychology_manual_final.txt  role_launcher.md  role_quickref.md  style.communication_overlays.md  style.compressed_en.md  style.elections_overlays.md  style.fun_overlays.md  style.fun_overlays3.md  style.history_overlays.md  style.kasravi_oliver.bilingual_en-fa.md  style.kasravi_oliver.en.md  style.lossless.md  style.modes_overlays.md  style.modes_overlays2.md  style.narrative_en.md  style.overlays.md  style.public_admin_overlays.md  style.social_science_overlays.md  style.sociolegal_overlays.md  style.story_data_overlays.md  (+3 more)
docs/: AGENT.md  AGENT_BOOTSTRAP.md  AGENT_CHECKLIST.md  AGENT_INTEGRATION.md  AGENT_INTENTS.json  AGENT_MANUAL.md  AGENT_RULEBOOK.md  ARCHITECTURE.md  Bridge.md  C2_PROTOCOL.md  C2_TASKS.md  CLI_AGENT_COMMAND_GUIDE.md  COLLAB.md  COLLAB_PROTOCOL.md  COMMANDS_CHEATSHEET.md  CONCEPT.md  CONTEXT.md  Config.md  DECISION_RULES.md  DEVS.md  EPUB_TRANSLATION.md  FAQ.md  GIT_POLICY.md  HANDOFF.md  HIGHER_AI_COMM_PROTOCOL.md  IMPLEMENTATION_CHECKLIST.md  IMPORTANT_FILES.md  INDEX.md  INTERNAL_AGENT_NOTES.md  JARGON.md  KNOWN_ISSUES.md  MAINTENANCE.md  MULTI_AGENT_SYNC_PROTOCOL.md  ONBOARDING_AI.md  OPERATING_MODEL.md  OPERATIONS.md  OPS.md  OUTBOX.md  Overlays.md  PROFILES.md  (+90 more)
examples/: 01_simple_book.py  02_monitor_job.py  03_batch_study_aids.py  commands.md
legacy/: chunk_snapshot.sh  jobs.py  lma_cli.py  lma_stream.py  lma_templates.py  lma_tui.py  mock_userscript.py  repo_snapshot.sh  xsarena_cli.py
pipelines/: fix-test-format-commit.yml
playbooks/: registry.yml  z2h.yml  z2h_multi.yml
recipes/: ail.en.yml  america-political-history.yml  arche_professor.yml  britain-political-history.yml  clinical.en.yml  cookbook.yml  fast_anchors-next-smoke.yml  fast_psychology-foundations-to-master-s-clinical-focus.yml  interactive_textbook.yml  mastery.yml  mixer_clinical.zero2hero.yml  mixer_elections.history.yml  mixer_modern-political-history-of-britain-elections-and-power-c-1832-present.yml  mixer_quick-test.yml  mixer_test-subject.yml  psychology_masters_clinical.yml  quick_reference.yml  role_launcher.yml  standard_book.yml  technical_writing_clinic.yml  travel_guide.yml  zero2hero_X.yml
reports/: agent_ticket_TEMPLATE.md  continuity_report.md  coverage_report.md  final_fix_report.md  incomplete_features.md  investigation_callback.md  investigation_migrations.md  investigation_precedence.md  report_20251020.md  report_snapshot_and_jobs.md  upgrade_log.md  upgrade_report.md
scripts/: agent_connect.sh  analyze_inclusion.py  apply_content_fixes.sh  auto_study_aids.sh  batch_generate.sh  c2_run.py  declutter_phase1.py  declutter_phase2.sh  dedupe_by_hash.sh  emergency_checklist.sh  gen_docs.sh  health_check_snapshot.sh  merge_session_rules.sh  normalize_content.sh  pre_snapshot_cleanup.sh  precommit_guard.sh  prepush_check.sh  quick_book.sh  repo_snapshot.sh  ruff_batch.py  ruff_done.py  ruff_file_json.sh  ruff_small.py  ruff_snapshot.sh  ruff_take.py  smoke.ps1  smoke.sh  snapshot_doctor.sh  snapshot_healthcheck.sh  snapshot_py_only.py  sync_pass.sh
sources/: persian_history_scripts_corpus.md
tests/: conftest.py  debug_maximal.py  snapshot_test_plan.json  test_backends_payloads.py  test_bridge_imports.py  test_bridge_v2_features.py  test_bridge_v2_health.py  test_capture_bridge_ids.py  test_chunking.py  test_cli_commands.py  test_cli_help_smoke.py  test_config_base_url.py  test_config_model.py  test_continuity_analyzer.py  test_control_channel.py  test_core_logic.py  test_coverage_map.py  test_discovery_roles_overlays.py  test_endpoints.py  test_extract_checklists.py  test_flatpack_cli.py  test_health_transport.py  test_helpers_loader.py  test_implementation.py  test_integration_cli.py  test_jobs_next_immediate.py  test_jobstore_events_parsing.py  test_jobstore_load.py  test_macros_import.py  test_modes_imports.py  test_orchestrator_composition.py  test_orchestrator_null.py  test_output_push_repetition.py  test_plan.json  test_playground_import.py  test_preview_autorun.py  (+14 more)
(+761 files in other folders)
