[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xsarena"
version = "0.1.0"
description = "AI-powered writing and coding studio"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "XSArena Team"}
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
tui = [
    "textual>=0.40.0"
]
gtk = [
    "PyGObject>=3.44"
]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0"
]
watch = [
    "watchdog>=3.0.0"
]
audio = [
    "edge-tts>=6.1.10",
    "ebooklib>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "pydub>=0.25.0"
]
metrics = [
    "prometheus-client>=0.19.0"
]
cache = [
    "redis>=4.0.0"
]

[project.scripts]
xsarena = "xsarena.cli.main:run"
xsarena-bridge = "xsarena.bridge.server:main"
xsarena-compat = "xsarena.bridge.compat_server:main"
# Backward-compatible shims (kept one release cycle)
lmastudio = "xsarena.cli.main:run"
lmastudio-bridge = "xsarena.bridge.server:main"

[project.urls]
Homepage = "https://github.com/your-username/xsarena"
Repository = "https://github.com/your-username/xsarena"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
extend-exclude = ["books", "snapshot_chunks", ".xsarena", ".lmastudio", "xsarena.egg-info"]

[tool.ruff.lint]
select = ["E","F","I"]
ignore = ["SIM"]
fixable = ["A", "B", "C", "DTZ", "E", "F", "G", "I", "N", "PGH", "PIE", "PL", "PT", "PYI", "RUF", "S", "SIM", "UP", "W", "YTT"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
